--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     }
   ],
   "browser_action": {
-    "default_icon" : "icon.png",
+    "default_icon" : "icon32x32.png",
     "default_title": "minweb"
   },
   "commands": {
