--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "minweb.io",
-  "description": "Show the most minimal version of a page offered by the publisher.",
-  "version": "1.0",
+  "name": "minweb.io: a cleaner web",
+  "short_name": "minweb",
+  "description": "Support publishers while browsing a browsable web.",
+  "version": "0.1",
   "manifest_version": 2,
   "permissions": ["tabs", "*://*/*"],
   "background": {
